...
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="ZnO-jb-CNg"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kL7-W4-IAS">
                                        <rect key="frame" x="0.0" y="133.5" width="700" height="34.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Search"/>
                                        <connections>
                                            <action selector="searchButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zgb-ak-xYI"/>
                                        </connections>
                                    </button>
...
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="MQZ-qp-1sp">
                                        <rect key="frame" x="0.0" y="695" width="700" height="100"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Spx-zr-VGf">
                                                <rect key="frame" x="0.0" y="0.0" width="233.5" height="100"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feels like" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R1t-o7-MHg">
                                                        <rect key="frame" x="0.0" y="0.0" width="233.5" height="50"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                        <variation key="heightClass=regular-widthClass=regular">
                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
...
